fix font size of banner on mobile

--- a/src/css/specific/banner.css
+++ b/src/css/specific/banner.css
@@ -10,7 +10,7 @@
 
 .banner p {
   color: #087299;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.35;
   margin: 0 1em;
 }
@@ -22,4 +22,10 @@
 .banner + .flex.container > .nav,
 .banner + .flex.container > .toc {
   max-height: calc(100vh - var(--banner-height));
+}
+
+@media (--md) {
+  .banner p {
+    font-size: 14px;
+  }
 }
